chat applications-k8s/K8s/backend-deployemt.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: backend
  template:
    metadata:
        name: backend-pod
        namespace: chat-app
        labels:
          app: backend
    spec:
      containers:
        - name: backend-deploy
          image: lastpush/chatpp-backend
          ports:
          - containerPort: 5001
