chat applications-k8s/K8s/frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
        name: frontend-pod
        namespace: chat-app
        labels:
          app: frontend
    spec:
      containers:
        - name: frontend-deploy
          image: lastpush/chatapp-frontend
          ports:
          - containerPort: 80
